# sample-physical-ai-scaffolding-kit

./: .gitignore  README.ja.md  README.ko.md  README.md
hyperpod/: README.ja.md  README.ko.md  README.md  package-lock.json
hyperpod/docs/en/: CLEANUP.md  DEPLOYMENT.md
hyperpod/docs/ja/: DEPLOYMENT.md
hyperpod/docs/ko/: CLEANUP.md  DEPLOYMENT.md
isaacsim-workstation/: README.ja.md  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
isaacsim-workstation/lib/: workstation-stack.ts
physai/: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md
physai/cli/: pyproject.toml
physai/cli/physai/: __main__.py  build.py  clean.py  cli.py  config.py  data.py  doctor.py  jobs.py  log_streamer.py  pipeline.py  schema.py  ssh.py
physai/cli/physai/build-scripts/: copy-app.sh  init-env.root.sh  mkdir-app.root.sh
physai/cli/physai/schemas/: cli-config.schema.json  container.schema.json  project.schema.json  run-config.schema.json
physai/cli/tests/: test_build.py  test_clean.py  test_cli.py  test_config.py  test_data.py  test_doctor.py  test_jobs.py  test_physai.py  test_pipeline.py  test_schema.py
physai/docs/: CONVENTIONS.md  INFRA.md  PHYSAI-DESIGN.md  PIPELINE-DESIGN.md  TIMINGS.md  USER_MANUAL.md  physai-design.md
physai/docs/en/: DEPLOYMENT.md  (+6 more)
physai/infra/: cdk.json  package-lock.json  package.json  tsconfig.json
samples/gr00t/: README.ja.md  README.ko.md  README.md
samples/isaac-lab-newton/: README.ja.md
samples/newton-rl/: README.ja.md  README.ko.md  README.md
samples/openpi-sample/: README.ja.md  README.ko.md  README.md
(+118 files in other folders)
